#1011 Solucionats problemes en: actualitzats clients